# fisica

./: CMakeLists.txt  LICENSE
src/: body.cpp  body.hpp  constants.hpp  main.cpp
